--- a/accounts/templates/base.html
+++ b/accounts/templates/base.html
@@ -49,7 +49,7 @@
                         <li><a href="{% url 'recommendations:home' %}">Home</a></li>
                         <li><a href="{% url 'accommodations:accommodation_list' %}">Accomodations</a></li>
                         <li><a href="{% url 'activities:activity_list' %}">Activities</a></li>
-                        <li><a href="{% url 'flights:flight_list' %}">Flights</a></li>
+                        <li><a href="{% url 'flights:flight_search' %}">Flights</a></li>
                         <li><a href="{% url 'bookings:bookings' %}">Bookings</a></li>
                         <li><a href="{% url 'accounts:profile' %}">Profile</a></li>
 
