--- a/flights/templates/flights/flights_search.html
+++ b/flights/templates/flights/flights_search.html
@@ -10,7 +10,7 @@
           {% if request.GET.search %}
             Search Results
           {% else %}
-            Accommodations
+            Flights
           {% endif %}
         </h1>
         <ul class="custom-breadcrumbs mb-4">
@@ -19,7 +19,7 @@
           {% else %}
             <li><a href="{% url 'recommendations:home' %}">Home</a></li>
             <li>&bullet;</li>
-            <li>Accommodations</li>
+            <li>Flights</li>
           {% endif %}
         </ul>
       </div>
@@ -39,18 +39,27 @@
       <div class="row check-availabilty" id="next">
           <div class="block-32" data-aos="fade-up" data-aos-offset="-200">
 
-              <form action="#" method="post">
+              <form method="post">
                   {% csrf_token %}
                   <div class="row">
-                      <div class="col-md-6 mb-3 mb-lg-0 col-lg-8">
-                          <label for="checkin_date" class="font-weight-bold text-black">Search</label>
+                      <div class="col-md-3 mb-3 mb-lg-0 col-lg-4">
+                          <label for="checkin_date" class="font-weight-bold text-black">Origin</label>
                           <div class="field-icon-wrap">
-                              {{form.search}}
+                              {{form.origin}}
                           </div>
                       </div>
+
+                      <div class="col-md-3 mb-3 mb-lg-0 col-lg-4">
+                        <label for="checkin_date" class="font-weight-bold text-black">Destination</label>
+                        <div class="field-icon-wrap">
+                            {{form.destination}}
+                        </div>
+                    </div>
                       
                       <div class="col-md-4 col-lg-4 align-self-end">
-                          <button class="btn btn-primary btn-block text-white">Search</button>
+                          <button class="btn btn-primary btn-block text-white" type="submit">Search</button>
+                          <!-- <input type="submit" value="Search...." class="btn btn-primary text-white py-3 px-5 font-weight-bold"> -->
+
                       </div>
                   </div>
               </form>
@@ -65,24 +74,39 @@
     
     <div class="row">
 
-      {% for accommodation in object_list %}
+      <!-- {% for flight in object_list %}
         <div class="col-md-6 col-lg-4 mb-5" data-aos="fade-up">
-          <a href="{% url 'accommodations:accommodation_detail' accommodation.pk %}" class="room">
+          <a href="{% url 'flights:flight_detail' flight.pk %}" class="room">
             <figure class="img-wrap">
               <img src="{{accommodation.pic.url}}" alt="{{accommodation.name}}" class="img-fluid mb-3">
             </figure>
             <div class="p-3 text-center room-info">
-              <h2>{{ accommodation.name }}</h2>
-              <span class="text-uppercase letter-spacing-1">{{accommodation.destination.name}}</span>
+              <h2>{{ flight.name }}</h2>
+              <span class="text-uppercase letter-spacing-1">origin -> destination</span>
             </div>
           </a>
         </div>
-      {% endfor %}
+      {% endfor %} -->
 
-      
+      {% if generated_route %}
+        <div class="col-md-6 col-lg-4 mb-5" data-aos="fade-up">
+          <a href="{% url 'flights:generated_route' generated_route.pk %}" class="room">
+            
+            <div class="p-3 text-center room-info">
+              <h2>{{ generated_route.get_name }}</h2>
+              <span class="text-uppercase letter-spacing-1">origin -> destination</span>
+            </div>
+          </a>
+        </div>
+      {% endif %}
 
     </div>
   </div>
 </section>
 
 {% endblock %} 
+
+
+
+
+
