--- a/recommendations/templates/recommendations/home.html
+++ b/recommendations/templates/recommendations/home.html
@@ -2,17 +2,25 @@
 
 {% block content %}
 
-
-
-
-
 <section class="site-hero overlay" style="background-image: url(/static/images/hero_4.jpg)" data-stellar-background-ratio="0.5">
     <div class="container">
         <div class="row site-hero-inner justify-content-center align-items-center">
             <div class="col-md-10 text-center" data-aos="fade-up">
                 <span class="custom-caption text-uppercase text-white d-block  mb-3"><span
                         class="fa fa-star text-primary"></span></span>
-                <h1 class="heading">Online Travel Planner</h1>
+                <h1 class="heading">
+                    {% if request.GET.search %}
+                        Search Results
+                    {% else %}
+                        Online Travel Planner
+                    {% endif %}
+                </h1>
+                
+                {% if request.GET.search %}
+                    <ul class="custom-breadcrumbs mb-4">
+                        <li>({{request.GET.search}})</li>
+                    </ul>
+                {% endif %}
             </div>
         </div>
     </div>
@@ -27,19 +35,19 @@
 
 <section class="section bg-light pb-0">
     <div class="container">
-
+  
         <div class="row check-availabilty" id="next">
             <div class="block-32" data-aos="fade-up" data-aos-offset="-200">
-
-                <form action="#">
+  
+                <form action="#" method="post">
+                    {% csrf_token %}
                     <div class="row">
                         <div class="col-md-6 mb-3 mb-lg-0 col-lg-8">
                             <label for="checkin_date" class="font-weight-bold text-black">Search</label>
                             <div class="field-icon-wrap">
-                                <input type="text" required class="form-control">
+                                {{form.search}}
                             </div>
                         </div>
-                        
                         
                         <div class="col-md-4 col-lg-4 align-self-end">
                             <button class="btn btn-primary btn-block text-white">Search</button>
@@ -49,7 +57,8 @@
             </div>
         </div>
     </div>
-</section>
+  </section>
+
 
 
 
