--- a/accommodations/templates/accommodations/accommodation_list.html
+++ b/accommodations/templates/accommodations/accommodation_list.html
@@ -17,7 +17,7 @@
           {% if request.GET.search %}
             <li>({{request.GET.search}})</li>
           {% else %}
-            <li><a href="{% url 'recommendations:home' %}">Home</a></li>
+            <li><a href="{% url 'recommendations:home' %}">Reviews</a></li>
             <li>&bullet;</li>
             <li>Accommodations</li>
           {% endif %}
