--- a/accommodations/templates/accommodations/accommodation_detail.html
+++ b/accommodations/templates/accommodations/accommodation_detail.html
@@ -7,7 +7,7 @@
       <div class="col-md-10 text-center" data-aos="fade">
         <h1 class="heading mb-3">{{ accommodation.name }}</h1>
         <ul class="custom-breadcrumbs mb-4">
-          <li><a href="index.html">Home</a></li>
+          <li><a href="{% url 'accommodations:accommodation_reviews' accommodation.pk %}">Reviews</a></li>
           <li>&bullet;</li>
           <li>{{ accommodation.name }}</li>
         </ul>
