--- a/accounts/templates/registration/register.html
+++ b/accounts/templates/registration/register.html
@@ -29,6 +29,12 @@
   <div class="container">
     <div class="row">
       <div class="col-md-7" data-aos="fade-up" data-aos-delay="100">
+
+        {% if form.errors %}
+            
+            {% include 'form_messages.html' with errors=form.errors %}
+            
+        {% endif %}
         
         <form action="#" method="post" class="bg-white p-md-5 p-4 mb-5 border">
           {% csrf_token %}
