--- a/accounts/templates/accounts/profile.html
+++ b/accounts/templates/accounts/profile.html
@@ -1,1 +1,62 @@
-Profile>>>>
+{% extends 'base.html' %}
+
+{% block content %} 
+
+
+<section class="site-hero inner-page overlay" style="background-image: url(/static/images/hero_4.jpg)" data-stellar-background-ratio="0.5">
+  <div class="container">
+    <div class="row site-hero-inner justify-content-center align-items-center">
+      <div class="col-md-10 text-center" data-aos="fade">
+        <h1 class="heading mb-3">Profile</h1>
+        <!-- <ul class="custom-breadcrumbs mb-4">
+          <li><a href="{% url 'accounts:register' %}">Sign Up</a></li>
+          <li>&bullet;</li>
+          <li>Sign In</li>
+        </ul> -->
+      </div>
+    </div>
+  </div>
+
+  <a class="mouse smoothscroll" href="#next">
+    <div class="mouse-icon">
+      <span class="mouse-wheel"></span>
+    </div>
+  </a>
+</section>
+<!-- END section -->
+
+
+
+
+
+
+
+
+{% endblock %} 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!-- 
+<form class="mb-3" method="POST">
+  {% csrf_token %}
+  {{ form.as_p }}
+  
+  <div class="mb-3">
+    <button class="btn btn-primary d-grid w-100" type="submit">Sign in</button>
+  </div>
+</form> -->
