--- a/accounts/templates/base.html
+++ b/accounts/templates/base.html
@@ -1,11 +1,12 @@
 {% load static %}
+{% load i18n %}
 
 <!DOCTYPE HTML>
 <html>
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Online Travel Planner</title>
+    <title>{% trans "Online Travel Planner" %}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=|Roboto+Sans:400,700|Playfair+Display:400,700">
@@ -25,14 +26,29 @@
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
   </head>
   <body>
+
     
+    {% include 'messages.html' %}
+    
+
     <header class="site-header js-site-header">
       <div class="container-fluid">
         <div class="row align-items-center">
-          <div class="col-6 col-lg-4 site-logo" data-aos="fade"><a href="{% url 'recommendations:home' %}">O</a></div>
+
+          <div class="col-6 col-lg-4 site-logo" data-aos="fade">
+            <form action="{% url 'set_language' %}" method="post">
+                {% csrf_token %}
+                <input name="next" type="hidden" value="{{ redirect_to }}" />
+                <select name="language" class="form-contol">
+                    <option value="en">English</option>
+                    <option value="es">Español</option>
+                    <option value="fr">Français</option>
+                </select>
+                <input type="submit" value="{% trans 'Change Language' %}" class="btn text-white ">
+            </form>
+          </div>
+
           <div class="col-6 col-lg-8">
-
-
             <div class="site-menu-toggle js-site-menu-toggle"  data-aos="fade">
               <span></span>
               <span></span>
@@ -48,19 +64,20 @@
                       <ul class="list-unstyled menu">
                         
                         {% if user.is_authenticated %}
-                          <li><a href="{% url 'recommendations:home' %}">Home</a></li>
-                          <li><a href="{% url 'accommodations:accommodation_list' %}">Accomodations</a></li>
-                          <li><a href="{% url 'activities:activity_list' %}">Activities</a></li>
-                          <li><a href="{% url 'flights:flight_search' %}">Flights</a></li>
-                          <li><a href="{% url 'bookings:bookings' %}">Bookings</a></li>
-                          <li><a href="{% url 'accounts:profile' %}">Profile</a></li>
+                          <li><a href="{% url 'recommendations:home' %}">{% trans "Home" %}</a></li>
+                          <li><a href="{% url 'accommodations:accommodation_list' %}">{% trans "Accommodations" %}</a></li>
+                          <li><a href="{% url 'activities:activity_list' %}">{% trans "Activities" %}</a></li>
+                          <li><a href="{% url 'flights:flight_search' %}">{% trans "Flights" %}</a></li>
+                          <li><a href="{% url 'bookings:bookings' %}">{% trans "Bookings" %}</a></li>
+                          <li><a href="{% url 'accounts:profile_update' %}">{% trans "Profile" %}</a></li>
 
                           <form method="post" action="{% url 'accounts:logout' %}">
                               {% csrf_token %}
-                              <button type="submit" class="getstarted">Sign Out</button>
+                              <input type="submit" value="{% trans 'Sign Out' %}" class="btn btn-primary text-white ">
+
                           </form>
                         {% else %}
-                          <li><a href="{% url 'accounts:login' %}">Sign In</a></li>
+                          <li><a href="{% url 'accounts:login' %}">{% trans "Sign In" %}</a></li>
                         {% endif %}
 
 
@@ -76,14 +93,11 @@
     </header>
     <!-- END head -->
 
-
-
-
-
     <!-- STUFF HERE -->
-    {% include 'messages.html' %}
 
     {% block content %}
+
+    
     {% endblock %}
 
 
