--- a/accounts/templates/registration/login.html
+++ b/accounts/templates/registration/login.html
@@ -1,4 +1,7 @@
+
 {% extends 'base.html' %}
+{% load i18n %}
+
 
 {% block content %} 
 
@@ -7,11 +10,11 @@
   <div class="container">
     <div class="row site-hero-inner justify-content-center align-items-center">
       <div class="col-md-10 text-center" data-aos="fade">
-        <h1 class="heading mb-3">Sign in</h1>
+        <h1 class="heading mb-3">{% trans "Sign In" %}</h1>
         <ul class="custom-breadcrumbs mb-4">
-          <li><a href="{% url 'accounts:register' %}">Sign Up</a></li>
+          <li><a href="{% url 'accounts:register' %}">{% trans "Sign Up" %}</a></li>
           <li>&bullet;</li>
-          <li>Sign In</li>
+          <li>{% trans "Sign In" %}</li>
         </ul>
       </div>
     </div>
@@ -42,7 +45,7 @@
 
           <div class="row">
             <div class="col-md-12 form-group">
-              <label for="adults" class="font-weight-bold text-black">Email</label>
+              <label for="adults" class="font-weight-bold text-black">{% trans "Email" %}</label>
               <div class="field-icon-wrap">
                 <div class="icon"><span class="ion-ios-arrow-down"></span></div>
                 {{form.username}}
@@ -50,7 +53,7 @@
             </div>
 
             <div class="col-md-12 form-group">
-              <label for="adults" class="font-weight-bold text-black">Password</label>
+              <label for="adults" class="font-weight-bold text-black">{% trans "Password" %}</label>
               <div class="field-icon-wrap">
                 <div class="icon"><span class="ion-ios-arrow-down"></span></div>
                 {{form.password}}
