--- a/flights/templates/flights/flights_search.html
+++ b/flights/templates/flights/flights_search.html
@@ -1,4 +1,6 @@
+
 {% extends 'base.html' %}
+{% load i18n %}
 
 {% block content %} 
 
@@ -8,18 +10,18 @@
       <div class="col-md-10 text-center" data-aos="fade">
         <h1 class="heading mb-3">
           {% if request.GET.search %}
-            Search Results
+            {% trans "Search Results" %}
           {% else %}
-            Flights
+            {% trans "Flights" %}
           {% endif %}
         </h1>
         <ul class="custom-breadcrumbs mb-4">
           {% if request.GET.search %}
             <li>({{request.GET.search}})</li>
           {% else %}
-            <li><a href="{% url 'recommendations:home' %}">Home</a></li>
+            <li><a href="{% url 'recommendations:home' %}">{% trans "Home" %}</a></li>
             <li>&bullet;</li>
-            <li>Flights</li>
+            <li>{% trans "Flights" %}</li>
           {% endif %}
         </ul>
       </div>
@@ -43,21 +45,21 @@
                   {% csrf_token %}
                   <div class="row">
                       <div class="col-md-3 mb-3 mb-lg-0 col-lg-4">
-                          <label for="checkin_date" class="font-weight-bold text-black">Origin</label>
+                          <label for="checkin_date" class="font-weight-bold text-black">{% trans "Origin" %}</label>
                           <div class="field-icon-wrap">
                               {{form.origin}}
                           </div>
                       </div>
 
                       <div class="col-md-3 mb-3 mb-lg-0 col-lg-4">
-                        <label for="checkin_date" class="font-weight-bold text-black">Destination</label>
+                        <label for="checkin_date" class="font-weight-bold text-black">{% trans "Destination" %}</label>
                         <div class="field-icon-wrap">
                             {{form.destination}}
                         </div>
                     </div>
                       
                       <div class="col-md-4 col-lg-4 align-self-end">
-                          <button class="btn btn-primary btn-block text-white" type="submit">Search</button>
+                          <button class="btn btn-primary btn-block text-white" type="submit">{% trans "Search" %}</button>
                           <!-- <input type="submit" value="Search...." class="btn btn-primary text-white py-3 px-5 font-weight-bold"> -->
 
                       </div>
@@ -100,7 +102,7 @@
         </div>
       {% else %}
 
-        <h1>Flights</h1>
+        <h1>{% trans "Flights" %}</h1>
         <br>
         {% for flight in flights %}
           <p>{{flight.name}}</p>
