--- a/accounts/templates/registration/login.html
+++ b/accounts/templates/registration/login.html
@@ -66,7 +66,7 @@
           
           <div class="row">
             <div class="col-md-6 form-group">
-              <input type="submit" value="Sign In" class="btn btn-primary text-white py-3 px-5 font-weight-bold">
+              <input type="submit" value="{% trans 'Sign In' %}" class="btn btn-primary text-white py-3 px-5 font-weight-bold">
             </div>
           </div>
         </form>
