--- a/accounts/templates/registration/register.html
+++ b/accounts/templates/registration/register.html
@@ -71,7 +71,7 @@
           
           <div class="row">
             <div class="col-md-6 form-group">
-              <input type="submit" value="Sign Up" class="btn btn-primary text-white py-3 px-5 font-weight-bold">
+              <input type="submit" value="{% trans 'Sign Up' %}" class="btn btn-primary text-white py-3 px-5 font-weight-bold">
             </div>
           </div>
         </form>
